--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -253,6 +253,21 @@ div.blockquote,
 		inset 0 -0.0625rem 0 0 rgba(var(--blockquote-border-color),0.75);
 }
 
+
+blockquote > :first-child,
+.blockquote > :first-child,
+div.blockquote > :first-child,
+[class*="blockquote"] > :first-child {
+	margin-top: 0;
+}
+
+blockquote > :last-child,
+.blockquote > :last-child,
+div.blockquote > :last-child,
+[class*="blockquote"] > :last-child {
+	margin-bottom: 0;
+}
+
 .colorbar-quote {
 	box-shadow: 
 		inset 0.25rem 0 0 0 rgba(var(--blockquote-colorbar-color)),
