--- a/src/css/wikidot-structure.css
+++ b/src/css/wikidot-structure.css
@@ -479,7 +479,7 @@ div[id*="page-options-bottom"] {
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
-	width: var(--body-width-on-desktop);
+	width: min(90vw, var(--body-width-on-desktop));
 	font-family: var(--UI-font);
 	font-size: var(--base-font-size);
 	text-align: left;
